@@ -46,7 +46,7 @@ The values set on the criterion are the default values on the search
 form.
 
     >>> from collective.formcriteria import testing
-    >>> now = testing.formcriteria_layer.now
+    >>> now = testing.layer.now
     >>> criterion.setStart(now-3)
     >>> criterion.setEnd(now-1)
 
