@@ -1,15 +1,0 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
-      xmlns:tal="http://xml.zope.org/namespaces/tal"
-      xmlns:metal="http://xml.zope.org/namespaces/metal"
-      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-      lang="en"
-      metal:use-macro="here/main_template/macros/master"
-      i18n:domain="plone">
-  <body>
-    
-    <metal:main fill-slot="main">
-      <metal:document use-macro="context/document_view/macros/main" />
-    </metal:main>
-
-  </body>
-</html>
