@@ -1,68 +1,75 @@
-<metal:block use-macro="here/global_defines/macros/defines" />
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      metal:use-macro="here/main_template/macros/master"
+      i18n:domain="plone">
+  <body>
 
-<dl class="collapsible"
-    tal:attributes="class python:'collapsible'+('submit' in request and ' collapsedOnLoad' or '');">
-  <dt class="collapsibleHeader">
-    Search Terms
-  </dt>
+    <metal:main fill-slot="main">
+      <metal:document use-macro="context/document_view/macros/main" />
 
-  <dd class="collapsibleContent">
+      <form action="."
+            class="enableAutoFocus"
+            method="get"
+            name="formcriteria_search"
+            id="formcriteria_search"
+            metal:define-macro="form"
+            tal:attributes="action form/action;"
+            tal:define="form nocall:form|nocall:view;
+                        field_macro nocall:context/formcriteria_macros/field_macro;
+                        errors options/state/getErrors|python:{};">
+        <fieldset metal:define-slot="fieldset">
+          <legend i18n:translate="legend_search_terms">Search Terms</legend>
 
-    <tal:comment content="nothing">
-      Copied from CMFPlone/skins/plone_forms/search_form.pt
-    </tal:comment>
-    <form action="."
-          class="enableAutoFocus"
-          method="get"
-          name="formcriteria_search"
-          id="formcriteria_search"
-          tal:attributes="action view/action;"
-          tal:define="field_macro nocall:context/formcriteria_macros/field_macro;
-		      errors options/state/getErrors|python:{};">
+          <dl>
+            <tal:criteria tal:repeat="criterion form/criteriaFields">
+              <dt>
+                <div class="field"
+                     metal:define-macro="label">
+                  <label
+                     tal:content="criterion/friendlyName"
+                     tal:attributes="for python:form.makeFormKey(criterion['id'], criterion['fields'][0].getName());"
+                     i18n:translate="">
+                    Label
+                  </label>
+                  <div class="formHelp" tal:content="criterion/description"
+                       i18n:translate="">
+                    Help
+                  </div>
+                </div>
+              </dt>
 
-      <dl>
-        <tal:criteria tal:repeat="criterion view/criteriaFields">
-          <dt>
-            
-            <div class="field">
- 	      <label
-	         tal:content="criterion/friendlyName"
-	         tal:attributes="for python:view.makeFormKey(criterion['id'], criterion['fields'][0].getName());"
-	         i18n:translate="">
-	        Label
-	      </label>
-	      <div class="formHelp" tal:content="criterion/description"
-	           i18n:translate="">
-	        Help
-	      </div>
-            </div>
-          </dt>
-          
-          <tal:comment content="nothing">
-            Copied from ATContentTypes/skins/ATContentTypes/atct_macros.pt
-          </tal:comment>
-          
-          <tal:fields repeat="field criterion/fields">
-            <dd tal:define="fieldName python:view.makeFormKey(criterion['id'], field.getName());"
-                tal:condition="python:field.mode != 'r'">
-              <metal:fieldMacro
-                 use-macro="python:criterion['widget'](fieldName, field=field, mode='edit')" />
-            </dd>
-          </tal:fields>
-        </tal:criteria>
-      </dl>
+              <tal:fields repeat="field criterion/fields">
+                <dd>
+                 <metal:field
+                    define-macro="field"
+                    tal:define="fieldName python:form.makeFormKey(criterion['id'], field.getName());"
+                    tal:condition="python:field.mode != 'r'">
+                   <metal:widget 
+                      use-macro="python:criterion['widget'](fieldName, field=field, mode='edit')" />
+                 </metal:field>
+                </dd>
+              </tal:fields>
+            </tal:criteria>
+          </dl>
 
-      <div class="visualClear" id="clear-space-before-submit"><!-- --></div>
+          <div class="visualClear" id="clear-space-before-submit"></div>
 
-      <div class="formControls">
-        <input class="context"
-	       type="submit"
-	       name="submit"
-	       value="Search"
-	       i18n:attributes="value label_search;"
-	       />
-      </div>
+          <div class="formControls"
+               metal:define-macro="formControls">
+            <input class="context"
+                   type="submit"
+                   name="submit"
+                   value="Search"
+                   i18n:attributes="value label_search;" />
+          </div>
 
-    </form>
-  </dd>
-</dl>
+        </fieldset>
+      </form>
+
+    </metal:main>
+
+  </body>
+</html>
